# gui-scale-applet

./: Cargo.toml  PKGBUILD  README.md
.github/workflows/: build-aur.yml
