[package]
name = "gui-scale-applet"
version = "2.0.0"
edition = "2021"
authors = ["Original Author <original.author@example.com>"]
maintainers = ["Johnny Castaway <Johnny.Castaway@cybirdtech.com>"]
description = "A secure, memory-safe implementation of a Tailscale GUI management applet for the System76 COSMIC desktop environment."
repository = "https://github.com/pop-os/gui-scale-applet"
license = "BSD-3-Clause"

[dependencies]
rust-embed = "8.0.0"
tokio = "1.31"
serde = "1.0.210"
url = "2.4.0"
regex = "1.11.1"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "wayland", "tokio", "desktop"]

[features]
xdg-portal = ["libcosmic/xdg-portal"]
rfd = ["libcosmic/rfd"]
default = ["xdg-portal"]
